[package]
name = "yewi-examples-form"
version = "0.17.1"
authors = ["Eric Andre <ericandre615@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.17", features = ["services"] }
wasm-bindgen = "0.2.67"
web-sys = { version = "0.3.44", features = [
    "Event",
    "EventTarget",
    "Element",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlCollection",
    "FormData",
]}
yewi = { path = "../../" }
